changed responsive prising, header

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             <div class="under__header">
                 <h1>COFFEE LAB SCHOOL</h1>
             </div>
-            <div class="under__header-hr">
-                <hr>
+            <div>
+                <hr class="under__header-hr">
             </div>
             <div class="under__header">
                 Master your coffee skills, whether you're a barista or just a coffee fan.
@@ -349,8 +349,10 @@
                 <h3 class="our__pricing__plans__header" id="pricing">
                     OUR PRISING PLANS
                 </h3>
-                <br>
-                <p class="about__prising">
+                <div>
+                    <hr class="under__header-hr">
+                </div>
+                <p class="about__pricing">
                     Learn more about the price and program of each corse we offer
                 </p>
             </div>
@@ -363,13 +365,13 @@
                         $150 | 5 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For all coffee fans;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Offline lessons only;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> All materials included;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> 8 hours of training;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Easy to repeat at home;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For all coffee fans;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Offline lessons only;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> All materials included;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> 8 hours of training;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Easy to repeat at home;</li>
                     </ul>
-                    <button>
+                    <button class="button__pricing">
                         Select Course
                     </button>
                 </article>
@@ -381,14 +383,14 @@
                         $365 | 23 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For beginners;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> 50+ hours of training;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Classic drinks;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Interships included;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> A certificate is issued;
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For beginners;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> 50+ hours of training;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Classic drinks;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Interships included;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> A certificate is issued;
                         </li>
                     </ul>
-                    <button>
+                    <button class="button__pricing">
                         Select Course
                     </button>
                 </article>
@@ -400,15 +402,15 @@
                         $350 | 14 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For proffessionals;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Online and offline;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Proffessional equipment;
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For proffessionals;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Online and offline;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Proffessional equipment;
                         </li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Coffee roasting details;
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Coffee roasting details;
                         </li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Alternative brewing;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Alternative brewing;</li>
                     </ul>
-                    <button>
+                    <button class="button__pricing">
                         Select Course
                     </button>
                 </article>
@@ -420,13 +422,13 @@
                         $150 | 5 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> For beginners;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Classic recipes;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Secret tips;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Making lush milk foam;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> 10 hours of training;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For beginners;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Classic recipes;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Secret tips;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Making lush milk foam;</li>
+                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> 10 hours of training;</li>
                     </ul>
-                    <button>
+                    <button class="button__pricing">
                         Select Course
                     </button>
                 </article>
