fix problems gallery

--- a/index.html
+++ b/index.html
@@ -470,22 +470,22 @@
 
         <nav class="galery">
             <div class="galery__imj-container">
-                <img width="400" src="imj/1-imj.png" alt="Barista Coffee">
+                <img width="400" src="img/1-imj.png" alt="Barista Coffee">
             </div>
             <div class="galery__imj-container">
-                <img width="400" src="imj/2-imj.png" alt="Barista Coffee">
+                <img width="400" src="img/2-imj.png" alt="Barista Coffee">
             </div>
             <div class="galery__imj-container">
-                <img width="400" src="imj/3-imj.png" alt="Barista Coffee">
+                <img width="400" src="img/3-imj.png" alt="Barista Coffee">
             </div>
             <div class="galery__imj-container">
-                <img width="400" src="imj/4-imj.png" alt="Barista Coffee">
+                <img width="400" src="img/4-imj.png" alt="Barista Coffee">
             </div>
             <div class="galery__imj-container">
-                <img width="400" src="imj/5-imj.png" alt="Barista Coffee">
+                <img width="400" src="img/5-imj.png" alt="Barista Coffee">
             </div>
             <div class="galery__imj-container">
-                <img width="400" src="imj/6-imj.png" alt="Barista Coffee">
+                <img width="400" src="img/6-imj.png" alt="Barista Coffee">
             </div>
         </nav>
 
