some changes in pricing and header, added classes for img

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="header__up">
             <div class="header__logo">
-                <img width="150" src="img/logo-barista.svg" alt="logo-barista">
+                <img class="img__logo" src="img/logo-barista.svg" alt="logo-barista">
             </div>
             <div class="header__nav">
                 <nav class="nav__links">
@@ -347,7 +347,7 @@
                     Pricing
                 </p>
                 <h3 class="our__pricing__plans__header" id="pricing">
-                    OUR PRISING PLANS
+                    OUR PRICING PLANS
                 </h3>
                 <div>
                     <hr class="under__header-hr">
@@ -365,11 +365,11 @@
                         $150 | 5 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For all coffee fans;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Offline lessons only;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> All materials included;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> 8 hours of training;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Easy to repeat at home;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For all coffee fans;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Offline lessons only;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> All materials included;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> 8 hours of training;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Easy to repeat at home;</li>
                     </ul>
                     <button class="button__pricing">
                         Select Course
@@ -383,11 +383,11 @@
                         $365 | 23 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For beginners;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> 50+ hours of training;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Classic drinks;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Interships included;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> A certificate is issued;
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For beginners;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> 50+ hours of training;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Classic drinks;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Interships included;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> A certificate is issued;
                         </li>
                     </ul>
                     <button class="button__pricing">
@@ -402,13 +402,13 @@
                         $350 | 14 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For proffessionals;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Online and offline;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Proffessional equipment;
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For proffessionals;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Online and offline;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Proffessional equipment;
                         </li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Coffee roasting details;
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Coffee roasting details;
                         </li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Alternative brewing;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Alternative brewing;</li>
                     </ul>
                     <button class="button__pricing">
                         Select Course
@@ -422,11 +422,11 @@
                         $150 | 5 days
                     </span>
                     <ul class="list__about__course">
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For beginners;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Classic recipes;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Secret tips;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Making lush milk foam;</li>
-                        <li><img width="25" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> 10 hours of training;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> For beginners;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Classic recipes;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Secret tips;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> Making lush milk foam;</li>
+                        <li><img class="img__checked__menu" src="img/checked__menu.svg" alt="checked menu" class="img__checked__menu"> 10 hours of training;</li>
                     </ul>
                     <button class="button__pricing">
                         Select Course
