--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you can
                             learn
                             even more about this hot and energizing drink</p>
-                        <a href="#pricing" class="btn_making_learn_more">Learn More</a>
+                        <a href="#pricing" type="submit" class="btn_making_learn_more">Learn More</a>
                     </div>
                 </div>
             </div>
