--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </div>
         </section>
         <section class="team">
-            <div>
+            <div class="team__column">
                 <p class="fonts_logo_team">Team</p>
                 <h2 class="h2_team">MEET OUR TEAM</h2>
                 <hr class="hr_logo_team">
@@ -246,19 +246,24 @@
             <div class="team_cards">
                 <article class="card_team">
                     <img class="img_team" src="img/photo_team.png" alt="team">
-                    <em>Coffee guru</em>
-                    <h2 class="h2_team_name">GARRY BEE</h2>
-                    <hr class="hr_team">
-                    <p class="team_fonts_p">Garry is a real coffee chef and enthusiast as he makes new recipes, which he
-                        will share with you
-                        on our course. If you want to make a perfect coffee blend and learn the secrets of delicious
-                        coffee, ask Garry.</p>
-                    <a class="facebook" href="http://facebook.com">
-                        <i class="fa-brands fa-facebook"></i></a>
-                    <a class="instagram" href="http://instagram.com">
-                        <i class="fa-brands fa-instagram"></i></a>
-                    <a class="youtube" href="http://youtube.com">
-                        <i class="fa-brands fa-youtube"></i></a>
+                    <div class="team__info">
+                        <em>Coffee guru</em>
+                        <h2 class="h2_team_name">GARRY BEE</h2>
+                        <hr class="hr_team">
+                        <p class="team_fonts_p">Garry is a real coffee chef and enthusiast as he makes new recipes,
+                            which he
+                            will share with you
+                            on our course. If you want to make a perfect coffee blend and learn the secrets of delicious
+                            coffee, ask Garry.</p>
+                        <div class="team__icons">
+                            <a class="team__facebook" href="http://facebook.com">
+                                <i class="fa-brands fa-facebook"></i></a>
+                            <a class="team__instagram" href="http://instagram.com">
+                                <i class="fa-brands fa-instagram"></i></a>
+                            <a class="team__youtube" href="http://youtube.com">
+                                <i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                    </div>
                 </article>
                 <article class="our_team_card">
                     <img class="img_team" src="img/photo_team_img.png" alt="our_team">
@@ -269,11 +274,11 @@
                         different techniques of
                         coffee art, and, through her lessons, you will learn how to make a perfect canvas on the latte
                         foam.</p>
-                    <a class="facebook" href="http://facebook.com">
+                    <a class="team__facebook" href="http://facebook.com">
                         <i class="fa-brands fa-facebook"></i></a>
-                    <a class="instagram" href="http://instagram.com">
+                    <a class="team__instagram" href="http://instagram.com">
                         <i class="fa-brands fa-instagram"></i></a>
-                    <a class="youtube" href="http://youtube.com">
+                    <a class="team__youtube" href="http://youtube.com">
                         <i class="fa-brands fa-youtube"></i></a>
                 </article>
                 <article class="meet_our_team_card">
@@ -285,11 +290,11 @@
                         your clients, Tomas
                         will teach you how to structure a coffee business from a big ambition to a famous go-to venue.
                     </p>
-                    <a class="facebook" href="http://facebook.com">
+                    <a class="team__facebook" href="http://facebook.com">
                         <i class="fa-brands fa-facebook"></i></a>
-                    <a class="instagram" href="http://instagram.com">
+                    <a class="team__instagram" href="http://instagram.com">
                         <i class="fa-brands fa-instagram"></i></a>
-                    <a class="youtube" href="http://youtube.com">
+                    <a class="team__youtube" href="http://youtube.com">
                         <i class="fa-brands fa-youtube"></i></a>
                 </article>
             </div>
