add section team

--- a/index.html
+++ b/index.html
@@ -265,37 +265,46 @@
                         </div>
                     </div>
                 </article>
-                <article class="our_team_card">
-                    <img class="img_team" src="img/photo_team_img.png" alt="our_team">
-                    <em>Latte master</em>
-                    <h2 class="h2_team_name">ANNA LENO</h2>
-                    <hr class="hr_team">
-                    <p class="team_fonts_p">Anna is in charge of the aspiring coffee artists. You will learn the
-                        different techniques of
-                        coffee art, and, through her lessons, you will learn how to make a perfect canvas on the latte
-                        foam.</p>
-                    <a class="team__facebook" href="http://facebook.com">
-                        <i class="fa-brands fa-facebook"></i></a>
-                    <a class="team__instagram" href="http://instagram.com">
-                        <i class="fa-brands fa-instagram"></i></a>
-                    <a class="team__youtube" href="http://youtube.com">
-                        <i class="fa-brands fa-youtube"></i></a>
+                <article class="card_team">
+                    <img class="img_team" src="img/photo_team_img.png" alt="team">
+                    <div class="team__info">
+                        <em>Latte master</em>
+                        <h2 class="h2_team_name">ANNA LENO</h2>
+                        <hr class="hr_team">
+                        <p class="team_fonts_p">Anna is in charge of the aspiring coffee artists. You will learn the
+                            different techniques of
+                            coffee art, and, through her lessons, you will learn how to make a perfect canvas on the
+                            latte foam.</p>
+                        <div class="team__icons">
+                            <a class="team__facebook" href="http://facebook.com">
+                                <i class="fa-brands fa-facebook"></i></a>
+                            <a class="team__instagram" href="http://instagram.com">
+                                <i class="fa-brands fa-instagram"></i></a>
+                            <a class="team__youtube" href="http://youtube.com">
+                                <i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                    </div>
                 </article>
-                <article class="meet_our_team_card">
-                    <img class="img_team" src="img/photo_team_image.png" alt="meet_our_team">
-                    <em>Owner of a bar</em>
-                    <h2 class="h2_team_name">TOMAS HETCH</h2>
-                    <hr class="hr_team">
-                    <p class="team_fonts_p">Tomas is a veteran bar owner. If you want your coffee place to be a home to
-                        your clients, Tomas
-                        will teach you how to structure a coffee business from a big ambition to a famous go-to venue.
-                    </p>
-                    <a class="team__facebook" href="http://facebook.com">
-                        <i class="fa-brands fa-facebook"></i></a>
-                    <a class="team__instagram" href="http://instagram.com">
-                        <i class="fa-brands fa-instagram"></i></a>
-                    <a class="team__youtube" href="http://youtube.com">
-                        <i class="fa-brands fa-youtube"></i></a>
+                <article class="card_team">
+                    <img class="img_team" src="img/photo_team_image.png" alt="team">
+                    <div class="team__info">
+                        <em>Owner of a bar</em>
+                        <h2 class="h2_team_name">TOMAS HETCH</h2>
+                        <hr class="hr_team">
+                        <p class="team_fonts_p">Tomas is a veteran bar owner. If you want your coffee place to be a home
+                            to
+                            your clients, Tomas
+                            will teach you how to structure a coffee business from a big ambition to a famous go-to
+                            venue.</p>
+                        <div class="team__icons">
+                            <a class="team__facebook" href="http://facebook.com">
+                                <i class="fa-brands fa-facebook"></i></a>
+                            <a class="team__instagram" href="http://instagram.com">
+                                <i class="fa-brands fa-instagram"></i></a>
+                            <a class="team__youtube" href="http://youtube.com">
+                                <i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                    </div>
                 </article>
             </div>
         </section>
