change index team

--- a/index.html
+++ b/index.html
@@ -256,11 +256,11 @@
                             on our course. If you want to make a perfect coffee blend and learn the secrets of delicious
                             coffee, ask Garry.</p>
                         <div class="team__icons">
-                            <a class="team__facebook" href="http://facebook.com">
+                            <a class="team__icon_font" href="http://facebook.com">
                                 <i class="fa-brands fa-facebook"></i></a>
-                            <a class="team__instagram" href="http://instagram.com">
+                            <a class="team__icon_font" href="http://instagram.com">
                                 <i class="fa-brands fa-instagram"></i></a>
-                            <a class="team__youtube" href="http://youtube.com">
+                            <a class="team__icon_font" href="http://youtube.com">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </div>
                     </div>
@@ -276,11 +276,11 @@
                             coffee art, and, through her lessons, you will learn how to make a perfect canvas on the
                             latte foam.</p>
                         <div class="team__icons">
-                            <a class="team__facebook" href="http://facebook.com">
+                            <a class="team__icon_font" href="http://facebook.com">
                                 <i class="fa-brands fa-facebook"></i></a>
-                            <a class="team__instagram" href="http://instagram.com">
+                            <a class="team__icon_font" href="http://instagram.com">
                                 <i class="fa-brands fa-instagram"></i></a>
-                            <a class="team__youtube" href="http://youtube.com">
+                            <a class="team__icon_font" href="http://youtube.com">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </div>
                     </div>
@@ -297,11 +297,11 @@
                             will teach you how to structure a coffee business from a big ambition to a famous go-to
                             venue.</p>
                         <div class="team__icons">
-                            <a class="team__facebook" href="http://facebook.com">
+                            <a class="team__icon_font" href="http://facebook.com">
                                 <i class="fa-brands fa-facebook"></i></a>
-                            <a class="team__instagram" href="http://instagram.com">
+                            <a class="team__icon_font" href="http://instagram.com">
                                 <i class="fa-brands fa-instagram"></i></a>
-                            <a class="team__youtube" href="http://youtube.com">
+                            <a class="team__icon_font" href="http://youtube.com">
                                 <i class="fa-brands fa-youtube"></i></a>
                         </div>
                     </div>
