--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         </div>
                     </div>
                 </article>
-                <article class="card_team">
+                <article class="card_team" id="card_team_anna">
                     <img class="img_team" src="img/photo_team_img.png" alt="team">
                     <div class="team__info">
                         <em>Latte master</em>
